--- a/coursera-spring-hello-world/.github/workflows/pipeline.yml
+++ b/coursera-spring-hello-world/.github/workflows/pipeline.yml
@@ -4,15 +4,23 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+      
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      
       - name: Build Docker Image
-        run: |
-          docker build -t spring-boot-app:latest .
+        run: docker build -t spring-boot-app:latest .
