--- a/coursera-spring-hello-world/.github/workflows/pipeline.yml
+++ b/coursera-spring-hello-world/.github/workflows/pipeline.yml
@@ -1,26 +1,23 @@
-name: CI/CD Pipeline
+name: Build and Test
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Set up Java
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
-      
-      - name: Build Docker Image
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
+      - name: Build Docker image
         run: docker build -t spring-boot-app:latest .
