Use simple docker build command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,16 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Build with Maven
-        run: |
-          cd coursera-spring-hello-world
-          mvn clean package -DskipTests
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Build Docker image
-        uses: docker/build-push-action@v5
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          context: ./coursera-spring-hello-world
-          file: ./coursera-spring-hello-world/Docker/Dockerfile
-          push: false
-          tags: spring-boot-app:latest
+          java-version: '21'
+          distribution: 'temurin'
+      - name: Build with Maven
+        run: cd coursera-spring-hello-world && mvn clean package -DskipTests
+      - name: Build Docker image
+        run: cd coursera-spring-hello-world && docker build -t spring-boot-app:latest -f Docker/Dockerfile .
