--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,16 +7,31 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  docker-build-push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          java-version: '21'
-          distribution: 'temurin'
-      - name: Build with Maven
-        run: cd coursera-spring-hello-world && mvn clean package -DskipTests
-      - name: Build Docker image
-        run: cd coursera-spring-hello-world && docker build -t spring-boot-app:latest -f Docker/Dockerfile .
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ secrets.ECR_REPO }}:latest .
+
+      - name: Push Docker Image to Amazon ECR
+        run: |
+          docker push ${{ secrets.ECR_REPO }}:latest
+          docker push ${{secrets.ECR_REPO}}:latest
+
+
+
+
