--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      - name: Verify AWS identity (debug)
+        run: |
+          echo "Checking AWS caller identity and ECR host"
+          aws sts get-caller-identity || true
+          echo "ECR host: $(echo '${{ secrets.ECR_REPO }}' | cut -d'/' -f1)"
+
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
@@ -30,7 +36,6 @@ jobs:
       - name: Push Docker Image to Amazon ECR
         run: |
           docker push ${{ secrets.ECR_REPO }}:latest
-          docker push ${{secrets.ECR_REPO}}:latest
 
 
 
